--- a/addons/sourcemod/configs/weapons/weapons_finnish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_finnish.cfg
@@ -1,5 +1,125 @@
 "Skins"
 {
+	"Damaskiteräs"
+	{
+		"index"		"858"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"Damaskiteräs"
+	{
+		"index"		"857"
+		"classes"	"weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
+	}
+	"Marmorihäivytys"
+	{
+		"index"		"856"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"Doppler (Phase 4)"
+	{
+		"index"		"855"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"Doppler (Phase 3)"
+	{
+		"index"		"854"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"Doppler (Phase 2)"
+	{
+		"index"		"853"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"Doppler (Phase 1)"
+	{
+		"index"		"852"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"Moonrise"
+	{
+		"index"		"851"
+		"classes"	"weapon_ump45;"
+	}
+	"Incinegator"
+	{
+		"index"		"850"
+		"classes"	"weapon_xm1014;"
+	}
+	"Off World"
+	{
+		"index"		"849"
+		"classes"	"weapon_p90;"
+	}
+	"Verdigris"
+	{
+		"index"		"848"
+		"classes"	"weapon_p250;"
+	}
+	"Mischief"
+	{
+		"index"		"847"
+		"classes"	"weapon_mp7;"
+	}
+	"Gauss"
+	{
+		"index"		"846"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Momentum"
+	{
+		"index"		"845"
+		"classes"	"weapon_aug;"
+	}
+	"Emperor"
+	{
+		"index"		"844"
+		"classes"	"weapon_m4a1;"
+	}
+	"Skull Crusher"
+	{
+		"index"		"843"
+		"classes"	"weapon_revolver;"
+	}
+	"Akoben"
+	{
+		"index"		"842"
+		"classes"	"weapon_galilar;"
+	}
+	"Light Rail"
+	{
+		"index"		"841"
+		"classes"	"weapon_deagle;"
+	}
+	"Whitefish"
+	{
+		"index"		"840"
+		"classes"	"weapon_mac10;"
+	}
+	"Bamboozle"
+	{
+		"index"		"839"
+		"classes"	"weapon_tec9;"
+	}
+	"Atheris"
+	{
+		"index"		"838"
+		"classes"	"weapon_awp;"
+	}
+	"Angry Mob"
+	{
+		"index"		"837"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Uncharted"
+	{
+		"index"		"836"
+		"classes"	"weapon_ak47;"
+	}
+	"Crypsis"
+	{
+		"index"		"835"
+		"classes"	"weapon_famas;"
+	}
 	"Flashback"
 	{
 		"index"		"817"
@@ -15,7 +135,7 @@
 		"index"		"815"
 		"classes"	"weapon_sg556;"
 	}
-	"Black Sand"
+	"Musta hiekka"
 	{
 		"index"		"814"
 		"classes"	"weapon_sawedoff;"
@@ -25,7 +145,7 @@
 		"index"		"813"
 		"classes"	"weapon_p250;"
 	}
-	"Pipe Down"
+	"Hiljentäjä"
 	{
 		"index"		"812"
 		"classes"	"weapon_mac10;"
@@ -35,7 +155,7 @@
 		"index"		"811"
 		"classes"	"weapon_m4a1;"
 	}
-	"Phosphor"
+	"Fosfori"
 	{
 		"index"		"810"
 		"classes"	"weapon_mp5sd;"
@@ -45,12 +165,12 @@
 		"index"		"809"
 		"classes"	"weapon_nova;"
 	}
-	"Oxide Blaze"
+	"Oksidiroihu"
 	{
 		"index"		"808"
 		"classes"	"weapon_glock;"
 	}
-	"Signal"
+	"Signaali"
 	{
 		"index"		"807"
 		"classes"	"weapon_galilar;"
@@ -85,7 +205,7 @@
 		"index"		"801"
 		"classes"	"weapon_ak47;"
 	}
-	"Night Stripe"
+	"Yön juova"
 	{
 		"index"		"735"
 		"classes"	"weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
@@ -260,7 +380,7 @@
 		"index"		"690"
 		"classes"	"weapon_aug;"
 	}
-	"Lab Rats"
+	"Koe-eläimet"
 	{
 		"index"		"800"
 		"classes"	"weapon_mp5sd;"
@@ -1010,12 +1130,12 @@
 		"index"		"795"
 		"classes"	"weapon_ak47;"
 	}
-	"Sweeper"
+	"Lakaisija"
 	{
 		"index"		"794"
 		"classes"	"weapon_aug;"
 	}
-	"Converter"
+	"Katalysaattori"
 	{
 		"index"		"793"
 		"classes"	"weapon_m4a1;"
@@ -1050,7 +1170,7 @@
 		"index"		"750"
 		"classes"	"weapon_sg556;"
 	}
-	"Vino Primo"
+	"Laatupunkku"
 	{
 		"index"		"749"
 		"classes"	"weapon_p250;"
@@ -1763,47 +1883,47 @@
 	"Doppler (Phase 4)"
 	{
 		"index"		"421"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
 	}
 	"Doppler (Phase 3)"
 	{
 		"index"		"420"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
 	}
 	"Doppler (Phase 2)"
 	{
 		"index"		"419"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
 	}
 	"Doppler (Phase 1)"
 	{
 		"index"		"418"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
 	}
 	"Doppler (Black Pearl)"
 	{
 		"index"		"417"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Doppler (Sapphire)"
 	{
 		"index"		"416"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Doppler (Ruby)"
 	{
 		"index"		"415"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Ruostepinta"
 	{
 		"index"		"414"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Marmorihäivytys"
 	{
 		"index"		"413"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
 	}
 	"Damaskiteräs"
 	{
@@ -1818,7 +1938,7 @@
 	"Tiikerinhammas"
 	{
 		"index"		"409"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Elohopea"
 	{
@@ -3158,7 +3278,7 @@
 	"Ultravioletti"
 	{
 		"index"		"98"
-		"classes"	"weapon_mac10;weapon_sg556;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_mac10;weapon_sg556;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Sinikuusi"
 	{
