--- a/addons/sourcemod/configs/weapons/weapons_turkish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_turkish.cfg
@@ -1,21 +1,141 @@
 "Skins"
 {
-	"Flashback"
+	"Şam Çeliği"
+	{
+		"index"		"858"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"Şam Çeliği"
+	{
+		"index"		"857"
+		"classes"	"weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
+	}
+	"Solgun Mermer"
+	{
+		"index"		"856"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"Doppler (Phase 4)"
+	{
+		"index"		"855"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"Doppler (Phase 3)"
+	{
+		"index"		"854"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"Doppler (Phase 2)"
+	{
+		"index"		"853"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"Doppler (Phase 1)"
+	{
+		"index"		"852"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"Moonrise"
+	{
+		"index"		"851"
+		"classes"	"weapon_ump45;"
+	}
+	"Incinegator"
+	{
+		"index"		"850"
+		"classes"	"weapon_xm1014;"
+	}
+	"Off World"
+	{
+		"index"		"849"
+		"classes"	"weapon_p90;"
+	}
+	"Verdigris"
+	{
+		"index"		"848"
+		"classes"	"weapon_p250;"
+	}
+	"Mischief"
+	{
+		"index"		"847"
+		"classes"	"weapon_mp7;"
+	}
+	"Gauss"
+	{
+		"index"		"846"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Momentum"
+	{
+		"index"		"845"
+		"classes"	"weapon_aug;"
+	}
+	"Emperor"
+	{
+		"index"		"844"
+		"classes"	"weapon_m4a1;"
+	}
+	"Skull Crusher"
+	{
+		"index"		"843"
+		"classes"	"weapon_revolver;"
+	}
+	"Akoben"
+	{
+		"index"		"842"
+		"classes"	"weapon_galilar;"
+	}
+	"Light Rail"
+	{
+		"index"		"841"
+		"classes"	"weapon_deagle;"
+	}
+	"Whitefish"
+	{
+		"index"		"840"
+		"classes"	"weapon_mac10;"
+	}
+	"Bamboozle"
+	{
+		"index"		"839"
+		"classes"	"weapon_tec9;"
+	}
+	"Atheris"
+	{
+		"index"		"838"
+		"classes"	"weapon_awp;"
+	}
+	"Angry Mob"
+	{
+		"index"		"837"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Uncharted"
+	{
+		"index"		"836"
+		"classes"	"weapon_ak47;"
+	}
+	"Crypsis"
+	{
+		"index"		"835"
+		"classes"	"weapon_famas;"
+	}
+	"Anımsama"
 	{
 		"index"		"817"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Fubar"
+	"Tarumar"
 	{
 		"index"		"816"
 		"classes"	"weapon_tec9;"
 	}
-	"Danger Close"
+	"Yakın Tehlike"
 	{
 		"index"		"815"
 		"classes"	"weapon_sg556;"
 	}
-	"Black Sand"
+	"Kara Kum"
 	{
 		"index"		"814"
 		"classes"	"weapon_sawedoff;"
@@ -25,47 +145,47 @@
 		"index"		"813"
 		"classes"	"weapon_p250;"
 	}
-	"Pipe Down"
+	"Kızıl Boru"
 	{
 		"index"		"812"
 		"classes"	"weapon_mac10;"
 	}
-	"Magnesium"
+	"Magnezyum"
 	{
 		"index"		"811"
 		"classes"	"weapon_m4a1;"
 	}
-	"Phosphor"
+	"Fosfor"
 	{
 		"index"		"810"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Wood Fired"
+	"Odun Ateşi"
 	{
 		"index"		"809"
 		"classes"	"weapon_nova;"
 	}
-	"Oxide Blaze"
+	"Oksit Alevi"
 	{
 		"index"		"808"
 		"classes"	"weapon_glock;"
 	}
-	"Signal"
+	"Sinyal"
 	{
 		"index"		"807"
 		"classes"	"weapon_galilar;"
 	}
-	"Scavenger"
+	"Leşçil"
 	{
 		"index"		"806"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Mecha Industries"
+	"Mecha Sanayi"
 	{
 		"index"		"805"
 		"classes"	"weapon_deagle;"
 	}
-	"Modest Threat"
+	"Mütevazı Tehdit"
 	{
 		"index"		"804"
 		"classes"	"weapon_mp9;"
@@ -85,7 +205,7 @@
 		"index"		"801"
 		"classes"	"weapon_ak47;"
 	}
-	"Lab Rats"
+	"Kobay Fareleri"
 	{
 		"index"		"800"
 		"classes"	"weapon_mp5sd;"
@@ -1748,12 +1868,12 @@
 	"Doppler (Faz 1)"
 	{
 		"index"		"418"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
 	}
 	"Doppler (Faz 2)"
 	{
 		"index"		"419"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
 	}
 	"Doppler (Faz 2)"
 	{
@@ -1763,17 +1883,17 @@
 	"Doppler (Faz 3)"
 	{
 		"index"		"420"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
 	}
 	"Doppler (Faz 4)"
 	{
 		"index"		"421"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
 	}
 	"Doppler (Safir)"
 	{
 		"index"		"416"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Doppler (Safir)"
 	{
@@ -1783,12 +1903,12 @@
 	"Doppler (Yakut)"
 	{
 		"index"		"415"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Doppler (Siyah İnci)"
 	{
 		"index"		"417"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Doppler (Siyah İnci)"
 	{
@@ -1798,12 +1918,12 @@
 	"Pas Kaplı"
 	{
 		"index"		"414"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Solgun Mermer"
 	{
 		"index"		"413"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
 	}
 	"Şam Çeliği"
 	{
@@ -1818,7 +1938,7 @@
 	"Kaplan Dişi"
 	{
 		"index"		"409"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Cıva"
 	{
@@ -3158,7 +3278,7 @@
 	"Morötesi"
 	{
 		"index"		"98"
-		"classes"	"weapon_mac10;weapon_sg556;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_mac10;weapon_sg556;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Mavi Ladin"
 	{
