--- a/addons/sourcemod/configs/weapons/weapons_hungarian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_hungarian.cfg
@@ -1,81 +1,201 @@
 "Skins"
 {
-	"Flashback"
+	"Damaszkuszi Acél"
+	{
+		"index"		"858"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"Damaszkuszi Acél"
+	{
+		"index"		"857"
+		"classes"	"weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
+	}
+	"Fakuló Márvány"
+	{
+		"index"		"856"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"Doppler (Phase 4)"
+	{
+		"index"		"855"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"Doppler (Phase 3)"
+	{
+		"index"		"854"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"Doppler (Phase 2)"
+	{
+		"index"		"853"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"Doppler (Phase 1)"
+	{
+		"index"		"852"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"Moonrise"
+	{
+		"index"		"851"
+		"classes"	"weapon_ump45;"
+	}
+	"Incinegator"
+	{
+		"index"		"850"
+		"classes"	"weapon_xm1014;"
+	}
+	"Off World"
+	{
+		"index"		"849"
+		"classes"	"weapon_p90;"
+	}
+	"Verdigris"
+	{
+		"index"		"848"
+		"classes"	"weapon_p250;"
+	}
+	"Mischief"
+	{
+		"index"		"847"
+		"classes"	"weapon_mp7;"
+	}
+	"Gauss"
+	{
+		"index"		"846"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Momentum"
+	{
+		"index"		"845"
+		"classes"	"weapon_aug;"
+	}
+	"Emperor"
+	{
+		"index"		"844"
+		"classes"	"weapon_m4a1;"
+	}
+	"Skull Crusher"
+	{
+		"index"		"843"
+		"classes"	"weapon_revolver;"
+	}
+	"Akoben"
+	{
+		"index"		"842"
+		"classes"	"weapon_galilar;"
+	}
+	"Light Rail"
+	{
+		"index"		"841"
+		"classes"	"weapon_deagle;"
+	}
+	"Whitefish"
+	{
+		"index"		"840"
+		"classes"	"weapon_mac10;"
+	}
+	"Bamboozle"
+	{
+		"index"		"839"
+		"classes"	"weapon_tec9;"
+	}
+	"Atheris"
+	{
+		"index"		"838"
+		"classes"	"weapon_awp;"
+	}
+	"Angry Mob"
+	{
+		"index"		"837"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Uncharted"
+	{
+		"index"		"836"
+		"classes"	"weapon_ak47;"
+	}
+	"Crypsis"
+	{
+		"index"		"835"
+		"classes"	"weapon_famas;"
+	}
+	"Visszapillantás"
 	{
 		"index"		"817"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Fubar"
+	"Bukta"
 	{
 		"index"		"816"
 		"classes"	"weapon_tec9;"
 	}
-	"Danger Close"
+	"Közeli Veszély"
 	{
 		"index"		"815"
 		"classes"	"weapon_sg556;"
 	}
-	"Black Sand"
+	"Fekete Homok"
 	{
 		"index"		"814"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Nevermore"
+	"Sohamár"
 	{
 		"index"		"813"
 		"classes"	"weapon_p250;"
 	}
-	"Pipe Down"
+	"Csövezés"
 	{
 		"index"		"812"
 		"classes"	"weapon_mac10;"
 	}
-	"Magnesium"
+	"Magnézium"
 	{
 		"index"		"811"
 		"classes"	"weapon_m4a1;"
 	}
-	"Phosphor"
+	"Foszfor"
 	{
 		"index"		"810"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Wood Fired"
+	"Perzselt Fa"
 	{
 		"index"		"809"
 		"classes"	"weapon_nova;"
 	}
-	"Oxide Blaze"
+	"Oxidláng"
 	{
 		"index"		"808"
 		"classes"	"weapon_glock;"
 	}
-	"Signal"
+	"Jelzés"
 	{
 		"index"		"807"
 		"classes"	"weapon_galilar;"
 	}
-	"Scavenger"
+	"Guberáló"
 	{
 		"index"		"806"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Mecha Industries"
+	"Mecha Iparművek"
 	{
 		"index"		"805"
 		"classes"	"weapon_deagle;"
 	}
-	"Modest Threat"
+	"Mérsékelt Fenyegetés"
 	{
 		"index"		"804"
 		"classes"	"weapon_mp9;"
 	}
-	"Neo-Noir"
+	"Neonoir"
 	{
 		"index"		"803"
 		"classes"	"weapon_awp;"
 	}
-	"Momentum"
+	"Lendület"
 	{
 		"index"		"802"
 		"classes"	"weapon_ump45;"
@@ -260,7 +380,7 @@
 		"index"		"690"
 		"classes"	"weapon_aug;"
 	}
-	"Lab Rats"
+	"Kísérleti Patkányok"
 	{
 		"index"		"800"
 		"classes"	"weapon_mp5sd;"
@@ -1763,47 +1883,47 @@
 	"Doppler (Phase 4)"
 	{
 		"index"		"421"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
 	}
 	"Doppler (Phase 3)"
 	{
 		"index"		"420"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
 	}
 	"Doppler (Phase 2)"
 	{
 		"index"		"419"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
 	}
 	"Doppler (Phase 1)"
 	{
 		"index"		"418"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
 	}
 	"Doppler (Black Pearl)"
 	{
 		"index"		"417"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Doppler (Sapphire)"
 	{
 		"index"		"416"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Doppler (Ruby)"
 	{
 		"index"		"415"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Rozsdabevonat"
 	{
 		"index"		"414"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Fakuló Márvány"
 	{
 		"index"		"413"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
 	}
 	"Damaszkuszi Acél"
 	{
@@ -1818,7 +1938,7 @@
 	"Tigrisfog"
 	{
 		"index"		"409"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Higany"
 	{
@@ -3158,7 +3278,7 @@
 	"Ultraibolya"
 	{
 		"index"		"98"
-		"classes"	"weapon_mac10;weapon_sg556;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_mac10;weapon_sg556;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Kék Lucfenyő"
 	{
