--- a/addons/sourcemod/configs/weapons/weapons_russian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_russian.cfg
@@ -1,5 +1,125 @@
 "Skins"
 {
+	"Дамасская сталь"
+	{
+		"index"		"858"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"Дамасская сталь"
+	{
+		"index"		"857"
+		"classes"	"weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
+	}
+	"Мраморный градиент"
+	{
+		"index"		"856"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"Волны (Phase 4)"
+	{
+		"index"		"855"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"Волны (Phase 3)"
+	{
+		"index"		"854"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"Волны (Phase 2)"
+	{
+		"index"		"853"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"Волны (Phase 1)"
+	{
+		"index"		"852"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"Moonrise"
+	{
+		"index"		"851"
+		"classes"	"weapon_ump45;"
+	}
+	"Incinegator"
+	{
+		"index"		"850"
+		"classes"	"weapon_xm1014;"
+	}
+	"Off World"
+	{
+		"index"		"849"
+		"classes"	"weapon_p90;"
+	}
+	"Verdigris"
+	{
+		"index"		"848"
+		"classes"	"weapon_p250;"
+	}
+	"Mischief"
+	{
+		"index"		"847"
+		"classes"	"weapon_mp7;"
+	}
+	"Gauss"
+	{
+		"index"		"846"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Momentum"
+	{
+		"index"		"845"
+		"classes"	"weapon_aug;"
+	}
+	"Emperor"
+	{
+		"index"		"844"
+		"classes"	"weapon_m4a1;"
+	}
+	"Skull Crusher"
+	{
+		"index"		"843"
+		"classes"	"weapon_revolver;"
+	}
+	"Akoben"
+	{
+		"index"		"842"
+		"classes"	"weapon_galilar;"
+	}
+	"Light Rail"
+	{
+		"index"		"841"
+		"classes"	"weapon_deagle;"
+	}
+	"Whitefish"
+	{
+		"index"		"840"
+		"classes"	"weapon_mac10;"
+	}
+	"Bamboozle"
+	{
+		"index"		"839"
+		"classes"	"weapon_tec9;"
+	}
+	"Atheris"
+	{
+		"index"		"838"
+		"classes"	"weapon_awp;"
+	}
+	"Angry Mob"
+	{
+		"index"		"837"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Uncharted"
+	{
+		"index"		"836"
+		"classes"	"weapon_ak47;"
+	}
+	"Crypsis"
+	{
+		"index"		"835"
+		"classes"	"weapon_famas;"
+	}
 	"Взгляд в прошлое"
 	{
 		"index"		"817"
@@ -1763,47 +1883,47 @@
 	"Волны (Phase 4)"
 	{
 		"index"		"421"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
 	}
 	"Волны (Phase 3)"
 	{
 		"index"		"420"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
 	}
 	"Волны (Phase 2)"
 	{
 		"index"		"419"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
 	}
 	"Волны (Phase 1)"
 	{
 		"index"		"418"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
 	}
 	"Волны (Black Pearl)"
 	{
 		"index"		"417"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Волны (Sapphire)"
 	{
 		"index"		"416"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Волны (Ruby)"
 	{
 		"index"		"415"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Пыльник"
 	{
 		"index"		"414"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Мраморный градиент"
 	{
 		"index"		"413"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
 	}
 	"Дамасская сталь"
 	{
@@ -1818,7 +1938,7 @@
 	"Зуб тигра"
 	{
 		"index"		"409"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Ртуть"
 	{
@@ -3158,7 +3278,7 @@
 	"Ультрафиолет"
 	{
 		"index"		"98"
-		"classes"	"weapon_mac10;weapon_sg556;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_mac10;weapon_sg556;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Голубая хвоя"
 	{
