--- a/addons/sourcemod/configs/weapons/weapons_tchinese.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_tchinese.cfg
@@ -1,86 +1,206 @@
 "Skins"
 {
-	"Flashback"
+	"大馬士革鋼"
+	{
+		"index"		"858"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"大馬士革鋼"
+	{
+		"index"		"857"
+		"classes"	"weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
+	}
+	"大理石漸層"
+	{
+		"index"		"856"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"都卜勒 (Phase 4)"
+	{
+		"index"		"855"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"都卜勒 (Phase 3)"
+	{
+		"index"		"854"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"都卜勒 (Phase 2)"
+	{
+		"index"		"853"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"都卜勒 (Phase 1)"
+	{
+		"index"		"852"
+		"classes"	"weapon_knife_widowmaker;"
+	}
+	"Moonrise"
+	{
+		"index"		"851"
+		"classes"	"weapon_ump45;"
+	}
+	"Incinegator"
+	{
+		"index"		"850"
+		"classes"	"weapon_xm1014;"
+	}
+	"Off World"
+	{
+		"index"		"849"
+		"classes"	"weapon_p90;"
+	}
+	"Verdigris"
+	{
+		"index"		"848"
+		"classes"	"weapon_p250;"
+	}
+	"Mischief"
+	{
+		"index"		"847"
+		"classes"	"weapon_mp7;"
+	}
+	"Gauss"
+	{
+		"index"		"846"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Momentum"
+	{
+		"index"		"845"
+		"classes"	"weapon_aug;"
+	}
+	"Emperor"
+	{
+		"index"		"844"
+		"classes"	"weapon_m4a1;"
+	}
+	"Skull Crusher"
+	{
+		"index"		"843"
+		"classes"	"weapon_revolver;"
+	}
+	"Akoben"
+	{
+		"index"		"842"
+		"classes"	"weapon_galilar;"
+	}
+	"Light Rail"
+	{
+		"index"		"841"
+		"classes"	"weapon_deagle;"
+	}
+	"Whitefish"
+	{
+		"index"		"840"
+		"classes"	"weapon_mac10;"
+	}
+	"Bamboozle"
+	{
+		"index"		"839"
+		"classes"	"weapon_tec9;"
+	}
+	"Atheris"
+	{
+		"index"		"838"
+		"classes"	"weapon_awp;"
+	}
+	"Angry Mob"
+	{
+		"index"		"837"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Uncharted"
+	{
+		"index"		"836"
+		"classes"	"weapon_ak47;"
+	}
+	"Crypsis"
+	{
+		"index"		"835"
+		"classes"	"weapon_famas;"
+	}
+	"過往回憶"
 	{
 		"index"		"817"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Fubar"
+	"頹門敗瓦"
 	{
 		"index"		"816"
 		"classes"	"weapon_tec9;"
 	}
-	"Danger Close"
+	"危近"
 	{
 		"index"		"815"
 		"classes"	"weapon_sg556;"
 	}
-	"Black Sand"
+	"黑沙"
 	{
 		"index"		"814"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Nevermore"
+	"往事不復矣"
 	{
 		"index"		"813"
 		"classes"	"weapon_p250;"
 	}
-	"Pipe Down"
+	"鋪管噪音"
 	{
 		"index"		"812"
 		"classes"	"weapon_mac10;"
 	}
-	"Magnesium"
+	"鎂金屬"
 	{
 		"index"		"811"
 		"classes"	"weapon_m4a1;"
 	}
-	"Phosphor"
+	"磷光顏料"
 	{
 		"index"		"810"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Wood Fired"
+	"青柴煉火"
 	{
 		"index"		"809"
 		"classes"	"weapon_nova;"
 	}
-	"Oxide Blaze"
+	"氧化焰痕"
 	{
 		"index"		"808"
 		"classes"	"weapon_glock;"
 	}
-	"Signal"
+	"訊號"
 	{
 		"index"		"807"
 		"classes"	"weapon_galilar;"
 	}
-	"Scavenger"
+	"拾荒者"
 	{
 		"index"		"806"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Mecha Industries"
+	"機甲工業"
 	{
 		"index"		"805"
 		"classes"	"weapon_deagle;"
 	}
-	"Modest Threat"
+	"適度威脅"
 	{
 		"index"		"804"
 		"classes"	"weapon_mp9;"
 	}
-	"Neo-Noir"
+	"穎黑"
 	{
 		"index"		"803"
 		"classes"	"weapon_awp;"
 	}
-	"Momentum"
+	"動量"
 	{
 		"index"		"802"
 		"classes"	"weapon_ump45;"
 	}
-	"Asiimov"
+	"艾西莫夫"
 	{
 		"index"		"801"
 		"classes"	"weapon_ak47;"
@@ -90,7 +210,7 @@
 		"index"		"735"
 		"classes"	"weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
-	"Eye of Athena"
+	"雅典娜之眼"
 	{
 		"index"		"723"
 		"classes"	"weapon_famas;"
@@ -100,62 +220,62 @@
 		"index"		"722"
 		"classes"	"weapon_tec9;"
 	}
-	"Survivalist"
+	"生存專家"
 	{
 		"index"		"721"
 		"classes"	"weapon_revolver;"
 	}
-	"Devourer"
+	"吞噬者"
 	{
 		"index"		"720"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Powercore"
+	"動力核心"
 	{
 		"index"		"719"
 		"classes"	"weapon_mp7;"
 	}
-	"PAW"
+	"肉球天堂"
 	{
 		"index"		"718"
 		"classes"	"weapon_awp;"
 	}
-	"Traction"
+	"收縮紋"
 	{
 		"index"		"717"
 		"classes"	"weapon_p90;"
 	}
-	"Toy Soldier"
+	"玩具士兵"
 	{
 		"index"		"716"
 		"classes"	"weapon_nova;"
 	}
-	"Capillary"
+	"微血管"
 	{
 		"index"		"715"
 		"classes"	"weapon_mp9;"
 	}
-	"Nightmare"
+	"夢魘"
 	{
 		"index"		"714"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Warhawk"
+	"戰鷹"
 	{
 		"index"		"713"
 		"classes"	"weapon_glock;"
 	}
-	"High Seas"
+	"公海"
 	{
 		"index"		"712"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Code Red"
+	"紅色警戒"
 	{
 		"index"		"711"
 		"classes"	"weapon_deagle;"
 	}
-	"Shred"
+	"碎條紋"
 	{
 		"index"		"710"
 		"classes"	"weapon_elite;"
@@ -165,27 +285,27 @@
 		"index"		"709"
 		"classes"	"weapon_cz75a;"
 	}
-	"Amber Slipstream"
+	"琥珀滑流"
 	{
 		"index"		"708"
 		"classes"	"weapon_aug;"
 	}
-	"Neon Rider"
+	"霓虹騎士"
 	{
 		"index"		"707"
 		"classes"	"weapon_ak47;"
 	}
-	"Oxide Blaze"
+	"氧化焰痕"
 	{
 		"index"		"706"
 		"classes"	"weapon_xm1014;"
 	}
-	"Cortex"
+	"腦皮層"
 	{
 		"index"		"705"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Arctic Wolf"
+	"北極白狼"
 	{
 		"index"		"704"
 		"classes"	"weapon_ump45;"
@@ -195,17 +315,17 @@
 		"index"		"703"
 		"classes"	"weapon_mag7;"
 	}
-	"Aloha"
+	"阿羅哈"
 	{
 		"index"		"702"
 		"classes"	"weapon_sg556;"
 	}
-	"Grip"
+	"握把"
 	{
 		"index"		"701"
 		"classes"	"weapon_revolver;"
 	}
-	"Urban Hazard"
+	"都市危機"
 	{
 		"index"		"700"
 		"classes"	"weapon_hkp2000;"
@@ -215,52 +335,52 @@
 		"index"		"699"
 		"classes"	"weapon_nova;"
 	}
-	"Lionfish"
+	"獅子魚"
 	{
 		"index"		"698"
 		"classes"	"weapon_negev;"
 	}
-	"Black Sand"
+	"黑沙"
 	{
 		"index"		"697"
 		"classes"	"weapon_mp9;"
 	}
-	"Bloodsport"
+	"血紅運動"
 	{
 		"index"		"696"
 		"classes"	"weapon_mp7;"
 	}
-	"Neo-Noir"
+	"穎黑"
 	{
 		"index"		"695"
 		"classes"	"weapon_m4a1;"
 	}
-	"Moonrise"
+	"月出"
 	{
 		"index"		"694"
 		"classes"	"weapon_glock;"
 	}
-	"Flame Test"
+	"焰色測試"
 	{
 		"index"		"693"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Night Riot"
+	"夜間除暴"
 	{
 		"index"		"692"
 		"classes"	"weapon_bizon;"
 	}
-	"Mortis"
+	"蛇棍"
 	{
 		"index"		"691"
 		"classes"	"weapon_awp;"
 	}
-	"Stymphalian"
+	"斯廷法羅斯湖怪鳥"
 	{
 		"index"		"690"
 		"classes"	"weapon_aug;"
 	}
-	"Lab Rats"
+	"實驗室老鼠"
 	{
 		"index"		"800"
 		"classes"	"weapon_mp5sd;"
@@ -985,7 +1105,7 @@
 		"index"		"541"
 		"classes"	"weapon_aug;"
 	}
-	"High Beam"
+	"遠光燈"
 	{
 		"index"		"799"
 		"classes"	"weapon_glock;"
@@ -995,32 +1115,32 @@
 		"index"		"798"
 		"classes"	"weapon_revolver;"
 	}
-	"Brake Light"
+	"煞車燈"
 	{
 		"index"		"797"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Check Engine"
+	"紅豆糕"
 	{
 		"index"		"796"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Safety Net"
+	"安全網"
 	{
 		"index"		"795"
 		"classes"	"weapon_ak47;"
 	}
-	"Sweeper"
+	"掃蕩者"
 	{
 		"index"		"794"
 		"classes"	"weapon_aug;"
 	}
-	"Converter"
+	"轉換器"
 	{
 		"index"		"793"
 		"classes"	"weapon_m4a1;"
 	}
-	"Slide"
+	"滑曳"
 	{
 		"index"		"755"
 		"classes"	"weapon_mp9;"
@@ -1030,127 +1150,127 @@
 		"index"		"754"
 		"classes"	"weapon_mag7;"
 	}
-	"Dirt Drop"
+	"垢滴"
 	{
 		"index"		"753"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Fade"
+	"漸層"
 	{
 		"index"		"752"
 		"classes"	"weapon_mp7;"
 	}
-	"Hand Brake"
+	"手煞車"
 	{
 		"index"		"751"
 		"classes"	"weapon_ssg08;"
 	}
-	"Integrale"
+	"義式整合"
 	{
 		"index"		"750"
 		"classes"	"weapon_sg556;"
 	}
-	"Vino Primo"
+	"第一道酒"
 	{
 		"index"		"749"
 		"classes"	"weapon_p250;"
 	}
-	"Calf Skin"
+	"小牛皮"
 	{
 		"index"		"748"
 		"classes"	"weapon_mac10;"
 	}
-	"Twin Turbo"
+	"雙渦輪"
 	{
 		"index"		"747"
 		"classes"	"weapon_elite;"
 	}
-	"Control Panel"
+	"控制面板"
 	{
 		"index"		"792"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Remote Control"
+	"遠端遙控"
 	{
 		"index"		"791"
 		"classes"	"weapon_tec9;"
 	}
-	"Cold Fusion"
+	"冷融合"
 	{
 		"index"		"790"
 		"classes"	"weapon_galilar;"
 	}
-	"Nuclear Garden"
+	"核子樂園"
 	{
 		"index"		"789"
 		"classes"	"weapon_glock;"
 	}
-	"Acheron"
+	"冥河"
 	{
 		"index"		"788"
 		"classes"	"weapon_awp;"
 	}
-	"Core Breach"
+	"核心外洩"
 	{
 		"index"		"787"
 		"classes"	"weapon_mag7;"
 	}
-	"Exchanger"
+	"交換器"
 	{
 		"index"		"786"
 		"classes"	"weapon_p250;"
 	}
-	"Mandrel"
+	"心軸"
 	{
 		"index"		"785"
 		"classes"	"weapon_nova;"
 	}
-	"Coolant"
+	"冷卻液"
 	{
 		"index"		"784"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Bulkhead"
+	"艙壁"
 	{
 		"index"		"783"
 		"classes"	"weapon_negev;"
 	}
-	"Motherboard"
+	"主機板"
 	{
 		"index"		"782"
 		"classes"	"weapon_mp7;"
 	}
-	"Co-Processor"
+	"輔助處理器"
 	{
 		"index"		"781"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Mainframe"
+	"大型主機"
 	{
 		"index"		"780"
 		"classes"	"weapon_m4a1;"
 	}
-	"Random Access"
+	"隨機存取"
 	{
 		"index"		"779"
 		"classes"	"weapon_aug;"
 	}
-	"Facility Dark"
+	"設施暗圖"
 	{
 		"index"		"778"
 		"classes"	"weapon_ump45;"
 	}
-	"Facility Draft"
+	"設施紅稿"
 	{
 		"index"		"777"
 		"classes"	"weapon_p250;"
 	}
-	"Facility Negative"
+	"設施陰極"
 	{
 		"index"		"776"
 		"classes"	"weapon_p90;"
 	}
-	"Facility Sketch"
+	"設施素描"
 	{
 		"index"		"775"
 		"classes"	"weapon_bizon;"
@@ -1763,47 +1883,47 @@
 	"都卜勒 (Phase 4)"
 	{
 		"index"		"421"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
 	}
 	"都卜勒 (Phase 3)"
 	{
 		"index"		"420"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
 	}
 	"都卜勒 (Phase 2)"
 	{
 		"index"		"419"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
 	}
 	"都卜勒 (Phase 1)"
 	{
 		"index"		"418"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
 	}
 	"都卜勒 (Black Pearl)"
 	{
 		"index"		"417"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"都卜勒 (Sapphire)"
 	{
 		"index"		"416"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"都卜勒 (Ruby)"
 	{
 		"index"		"415"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"鏽衣"
 	{
 		"index"		"414"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"大理石漸層"
 	{
 		"index"		"413"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;"
 	}
 	"大馬士革鋼"
 	{
@@ -1818,7 +1938,7 @@
 	"虎牙"
 	{
 		"index"		"409"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"水銀"
 	{
@@ -3158,7 +3278,7 @@
 	"致命紫羅蘭"
 	{
 		"index"		"98"
-		"classes"	"weapon_mac10;weapon_sg556;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
+		"classes"	"weapon_mac10;weapon_sg556;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"藍色雲杉"
 	{
